--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,14 @@
     "homepage": "https://github.com/mpclarkson/freshdesk-laravel",
     "keywords": ["freshdesk", "customer service", "support", "help desk", "api", "laravel"],
     "type": "laravel-package",
+    "repositories" : [
+        {
+            "type" : "vcs",
+            "url" : "https://github.com/elliotboney/freshdesk-php-sdk"
+        }
+    ],
     "require": {
-        "mpclarkson/freshdesk-php-sdk": "0.3.*",
+        "elliotboney/freshdesk-php-sdk": "dev-master",
         "illuminate/support": "~5.1"
     },
     "require-dev": {
